fix overlapping issue

--- a/src/app/document/document.style.css
+++ b/src/app/document/document.style.css
@@ -2063,3 +2063,6 @@ ul.catalogue-feature-blk li {
 .sectorsDropdown .dropdown-menu {
   z-index: 9 !important;
 }
+.sectorsDropdown .d-inline-block.dropdown{
+  z-index: 99 !important;
+}
